--- a/source/Views/Interface/ScAchievementsListCompactVertical.xaml
+++ b/source/Views/Interface/ScAchievementsListCompactVertical.xaml
@@ -7,13 +7,14 @@
              xmlns:local1="clr-namespace:SuccessStory.Controls"
              xmlns:converters="clr-namespace:CommonPlayniteShared.Converters"
              xmlns:convertersshared="clr-namespace:CommonPluginsShared.Converters"
+             xmlns:converters1="clr-namespace:SuccessStory.Converters"
              mc:Ignorable="d" d:DesignHeight="100" d:DesignWidth="100">
 
     <UserControl.Resources>
         <converters:InvertedBooleanToVisibilityConverter x:Key="InvertedBooleanToVisibilityConverter" />
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
         <convertersshared:LocalDateTimeConverter x:Key="LocalDateTimeConverter" />
-        <local1:SetColorConverter x:Key="SetColorConverter" />
+        <converters1:SetColorConverter x:Key="SetColorConverter" />
     </UserControl.Resources>
 
     <ListBox Name="lbAchievements" Loaded="LbAchievements_Loaded" MaxWidth="80"
