--- a/source/Views/Interfaces/OverwatchStats.xaml
+++ b/source/Views/Interfaces/OverwatchStats.xaml
@@ -9,13 +9,14 @@
              xmlns:controls1="clr-namespace:SuccessStory.Controls"
              xmlns:playnitecontrols="clr-namespace:CommonPlayniteShared.Controls"
              xmlns:controls="clr-namespace:CommonPluginsShared.Controls"
+             xmlns:converters1="clr-namespace:SuccessStory.Converters"
              mc:Ignorable="d" d:DesignWidth="1000">
 
     <UserControl.Resources>
         <converters:InvertedBooleanToVisibilityConverter x:Key="InvertedBooleanToVisibilityConverter" />
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
         <convertersshared:LocalDateTimeConverter x:Key="LocalDateTimeConverter" />
-        <controls1:SetColorConverter x:Key="SetColorConverter" />
+        <converters1:SetColorConverter x:Key="SetColorConverter" />
         <convertersshared:ImageToGrayConverter x:Key="ImageToGrayConverter" />
     </UserControl.Resources>
 
