--- a/source/Views/SuccessStoryEditManual.xaml
+++ b/source/Views/SuccessStoryEditManual.xaml
@@ -8,13 +8,14 @@
              xmlns:controls="clr-namespace:SuccessStory.Controls"
              xmlns:converters="clr-namespace:CommonPlayniteShared.Converters"
              xmlns:convertersshared="clr-namespace:CommonPluginsShared.Converters"
+             xmlns:converters1="clr-namespace:SuccessStory.Converters"
              mc:Ignorable="d" Height="700" Width="800">
 
     <UserControl.Resources>
         <converters:InvertedBooleanToVisibilityConverter x:Key="InvertedBooleanToVisibilityConverter" />
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
         <convertersshared:LocalDateTimeConverter x:Key="LocalDateTimeConverter" />
-        <controls:SetColorConverter x:Key="SetColorConverter" />
+        <converters1:SetColorConverter x:Key="SetColorConverter" />
         <convertersshared:IndexConverter x:Key="IndexConverter" />
     </UserControl.Resources>
 
